create github pages

--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">free website maker app</a></section><section class="header1 cid-qHyFsoIRgf mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="header1 cid-qHyFsoIRgf mbr-parallax-background" id="header1-f">
 
     
 
@@ -99,15 +99,11 @@
     <div class="container">
         <div class="media-container-row">
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-                   It's really very amazing app that makes me finish html page in 3 minutes that's usually takes more than 1 hours at least from me if i did it from scratch
-                </p>
-                <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
-                   Julie C.
-                </p>
-                <p class="mbr-author-desc mbr-fonts-style display-7">
-                   INTERFACE DESIGNER
-                </p>
+                <p class="mbr-text testimonial-text mbr-fonts-style display-7"><span style="font-style: normal;">A warm welcome awaits all guests at Oceans 32 Guesthouse, a new guesthouse in Gonubie,</span> <span style="font-style: normal;">overlooking a pristine part of the Indian Ocean.  Dolphins, monkeys, and birdlife are viewed on a daily basis, along with whale watching and buck on the rarer occasions.  We are situated in a quiet area at the end of a cul de sac, allowing traffic to be a sound only to be remembered</span>.
+<br><br><span style="font-style: normal;">We have 5 bedrooms, all tastefully decorated with crisp white linen.  The house offers flat screen tv’s, dstv, 3 braai areas, an entertainment area with darts, a pool table, bar area, a solar heated indoor swimming pool and much more.
+</span><br><span style="font-style: normal;"><br>We are the perfect spot for both business and leisure travellers, offering a tranquil atmosphere conducive to rest and rejuvenation and a short distance away from shopping centres, nightlife, etc for those requiring something busier</span>.</p>
+                <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7"></p>
+                <p class="mbr-author-desc mbr-fonts-style display-7"></p>
             </div>
 
             <div class="mbr-figure pl-lg-5" style="width: 130%;">
