--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build your own website</a></section><section class="header1 cid-qHyFsoIRgf mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.ws/b">best free website creator</a></section><section class="header1 cid-qHyFsoIRgf mbr-parallax-background" id="header1-f">
 
     
 
@@ -390,7 +390,7 @@
                     Contacts
                 </h5>
                 <p class="mbr-text">
-                    Email: oceans32guesthouse@gmail.com
+                    Email: <a href="mailto:oceans32guesthouse@gmail.com">oceans32guesthouse@gmail.com</a>
                     <br>Phone: +27 (0) 76 5225 602&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br>Fax: +27 (0) 43</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
