create github pages

--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make free website</a></section><section class="header1 cid-qHFayqi21A mbr-parallax-background" id="header1-1b">
+<section class="engine"><a href="https://mobirise.ws/k">develop own website</a></section><section class="header1 cid-qHFayqi21A mbr-parallax-background" id="header1-1b">
 
     
 
@@ -230,7 +230,7 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-4" href="gallery.html">MORE PHOTOS</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-warning display-4" href="page3.html">MORE PHOTOS</a></div>
             </div>
         </div>
     </div>
